adjusted padding for image, spacing is correct.

--- a/styles.css
+++ b/styles.css
@@ -124,12 +124,6 @@ h1 {
   color: white;
 }
 
-/* .intro-image {
-  position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
-  flex-shrink: 0;
-} */
 
 .intro-image img {
   max-width: 400px;
@@ -174,17 +168,10 @@ h1 {
   }
 }
 
-/* .about-page .intro-image {
-  position: fixed;
-  top: 50%;                  
-  right: 350px;               
-  transform: translateY(-50%);
-  width: 400px;                        
-} */
 
 .about-page .intro-image {
     position: sticky;
-    top: 100px; 
+    top: 130px; 
     flex-shrink: 0;
     width: 400px;
 }
